crates/mega-evm/tests/satin/snapshots/satin__history_reservoir__a_nested_creation_pays_its_records_out_of_the_reservoir.snap
---
source: crates/mega-evm/tests/satin/history_reservoir.rs
expression: "&views(&outcome, &below)"
---
{
  "above the cap": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x0000000000000000000000000000000000000000000000000000000000700001",
            "0x0000000000000000000000001d81dae1a64e8e234b72c0321f8d3d1196e2670b"
          ],
          "data": "0x0000000000000000000000000000000000000000000000000000000000000001"
        }
      ]
    },
    "gas": {
      "regular": 47009,
      "state": 183600,
      "history": 34320,
      "history_bytes": 390,
      "reservoir_remaining": 99782080,
      "floor": 15000,
      "gas_used": 264929
    },
    "result_gas": {
      "total_gas_spent": 264929,
      "state_gas_spent": 183600,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99782080
    },
    "usage": {
      "data_size": 550,
      "write_records": 2
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000700000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000700001": {
        "balance": "0x98967f",
        "nonce": 1,
        "code_hash": "0xb3eb301f602b47cc5a00e9eeed940a8cf7b2d281d45ac3434df0c6c3278cfb83",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x1d81dae1a64e8e234b72c0321f8d3d1196e2670b": {
        "balance": "0x1",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": true,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "below the cap": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x0000000000000000000000000000000000000000000000000000000000700001",
            "0x0000000000000000000000001d81dae1a64e8e234b72c0321f8d3d1196e2670b"
          ],
          "data": "0x0000000000000000000000000000000000000000000000000000000000000001"
        }
      ]
    },
    "gas": {
      "regular": 47009,
      "state": 183600,
      "history": 34320,
      "history_bytes": 390,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 264929
    },
    "result_gas": {
      "total_gas_spent": 264929,
      "state_gas_spent": 183600,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 550,
      "write_records": 2
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000700000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000700001": {
        "balance": "0x98967f",
        "nonce": 1,
        "code_hash": "0xb3eb301f602b47cc5a00e9eeed940a8cf7b2d281d45ac3434df0c6c3278cfb83",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x1d81dae1a64e8e234b72c0321f8d3d1196e2670b": {
        "balance": "0x1",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": true,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
