crates/mega-evm/tests/satin/snapshots/satin__history_reservoir__a_value_call_pays_its_records_out_of_the_reservoir.snap
---
source: crates/mega-evm/tests/satin/history_reservoir.rs
expression: "&views(&outcome, &below)"
---
{
  "above the cap": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x0000000000000000000000000000000000000000000000000000000000700001",
            "0x0000000000000000000000000000000000000000000000000000000000700002"
          ],
          "data": "0x0000000000000000000000000000000000000000000000000000000000000001"
        }
      ]
    },
    "gas": {
      "regular": 49318,
      "state": 183600,
      "history": 34320,
      "history_bytes": 390,
      "reservoir_remaining": 99782080,
      "floor": 15000,
      "gas_used": 267238
    },
    "result_gas": {
      "total_gas_spent": 267238,
      "state_gas_spent": 183600,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99782080
    },
    "usage": {
      "data_size": 550,
      "write_records": 2
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000700000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000700001": {
        "balance": "0x98967f",
        "nonce": 0,
        "code_hash": "0xbe3e3293005755700aa33a6da0a1fd93ce4c6a62c24129f58435881a3791434f",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000700002": {
        "balance": "0x1",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "below the cap": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x0000000000000000000000000000000000000000000000000000000000700001",
            "0x0000000000000000000000000000000000000000000000000000000000700002"
          ],
          "data": "0x0000000000000000000000000000000000000000000000000000000000000001"
        }
      ]
    },
    "gas": {
      "regular": 49318,
      "state": 183600,
      "history": 34320,
      "history_bytes": 390,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 267238
    },
    "result_gas": {
      "total_gas_spent": 267238,
      "state_gas_spent": 183600,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 550,
      "write_records": 2
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000700000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000700001": {
        "balance": "0x98967f",
        "nonce": 0,
        "code_hash": "0xbe3e3293005755700aa33a6da0a1fd93ce4c6a62c24129f58435881a3791434f",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000700002": {
        "balance": "0x1",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
